# bevy_rapier

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  publish.sh  writeback-2.tracy
.github/workflows/: dependencies.yml  main.yml  rust.yml
assets/: Suzanne.gltf
benches_common/: Cargo.toml
benches_common/src/: lib.rs
bevy_rapier2d/: Cargo.toml
bevy_rapier2d/examples/: boxes2.rs  character_controller.rs  contact_filter2.rs  custom_system_setup2.rs  debug_despawn2.rs  debug_toggle2.rs  debugdump2.rs  despawn2.rs  events2.rs  joints2.rs  joints2_simple.rs  joints_despawn2.rs  locked_rotations2.rs  multiple_colliders2.rs  player_movement.rs  player_movement2.rs  rope_joint2.rs  serialization.rs  serialization2.rs  system_setup2.rs  testbed2.rs  voxels2.rs  voxels2_no_collider.rs
bevy_rapier2d_examples/: Cargo.toml
bevy_rapier2d_examples/examples/: boxes2.rs  contact_filter2.rs  debug_despawn2.rs  despawn2.rs  rope_joint2.rs  testbed2.rs
bevy_rapier2d_examples/src/: boxes2.rs  debug_despawn2.rs  despawn2.rs  lib.rs  rope_joint2.rs
bevy_rapier2d_f64/: Cargo.toml
bevy_rapier3d/: Cargo.toml
bevy_rapier3d/benches/: cubes.rs  many_pyramids3.rs  many_pyramids3_custom.rs
bevy_rapier3d/benches/common/: mod.rs
bevy_rapier3d/examples/: boxes3.rs  change_contexts3.rs  change_world3.rs  character_controller3.rs  contact_filter3.rs  convex_mesh_collider.rs  custom_system_setup3.rs  debug_toggle3.rs  debugdump3.rs  despawn3.rs  events3.rs  issue_rapier_748.rs  joints3.rs  joints_despawn3.rs  kinematic_velocity.rs  locked_rotations3.rs  multi_contexts3.rs  multi_world3.rs  multiple_colliders3.rs  picking3.rs  platform3.rs  rapier_context_component.rs  rapier_to_bevy_mesh.rs  ray_casting3.rs  static_trimesh3.rs  super_fast3.rs  system_setup3.rs  testbed3.rs  trimesh_collider.rs  voxels3.rs
bevy_rapier3d/tests/: ambiguity_detection.rs
bevy_rapier3d_f64/: Cargo.toml
bevy_rapier_benches3d/: Cargo.toml  README.md
bevy_rapier_benches3d/benches/: common.rs
bevy_rapier_benches3d/src/: common.rs  lib.rs  main.rs  pyramids.rs
ci/: Cargo.toml
custom_benches/: Cargo.toml  README.md
custom_benches/src/: main.rs
src/: lib.rs
src/control/: character_controller.rs  mod.rs
src/dynamics/: fixed_joint.rs  generic_joint.rs  joint.rs  mod.rs  prismatic_joint.rs  revolute_joint.rs  rigid_body.rs  rope_joint.rs  spherical_joint.rs  spring_joint.rs
src/geometry/: collider.rs  collider_impl.rs  mod.rs  to_bevy_mesh.rs
src/geometry/query/: mod.rs
src/geometry/shape_views/: ball.rs  capsule.rs  collider_view.rs  compound.rs  cone.rs  convex_polygon.rs  convex_polyhedron.rs  cuboid.rs  cylinder.rs  halfspace.rs  heightfield.rs  mod.rs  polyline.rs  round_shape.rs  segment.rs  triangle.rs  trimesh.rs  voxels.rs
src/physics/: collider_component_set.rs  components.rs  mesh_collider.rs  mod.rs  plugins.rs  resources.rs  rigid_body_component_set.rs  systems.rs  wrapper.rs
src/picking_backend/: mod.rs
src/pipeline/: events.rs  mod.rs  physics_hooks.rs  query_filter.rs
src/plugin/: configuration.rs  context.rs  interpolation_context.rs  mod.rs  narrow_phase.rs  picking_backend.rs  plugin.rs  systems.rs  systems_old.rs
src/plugin/context/: mod.rs  systemparams.rs
src/plugin/context/systemparams/: mod.rs  rapier_context_access.rs  rapier_context_systemparam.rs
src/plugin/systems/: character_controller.rs  collider.rs  joint.rs  joints.rs  mod.rs  multiple_rapier_contexts.rs  removals.rs  remove.rs  rigid_body.rs  simulate.rs  worlds.rs  writeback.rs
src/reflect/: mod.rs
src/render/: components.rs  mod.rs  plugin.rs  plugins.rs  systems.rs
src/render/entities/: camera.rs  collider.rs  mod.rs  path.rs  position.rs
src/render/lines/: debuglines.wgsl  mod.rs  render_dim.rs
src/render/mesh/: capsule.rs  cube.rs  cylinder.rs  mod.rs  polyline.rs  segment.rs  sphere.rs  trimesh.rs
src/render/render/: mod.rs  pass.rs  position_material.rs  setup.rs  wireframe_material.rs
src/render/render/shaders/: position.frag  position.vert  wireframe.frag  wireframe.vert
src/render/systems/: collider.rs  mod.rs  path.rs  position.rs  render_pass.rs  visibility.rs
src/utils/: as_precise.rs  as_real.rs  mod.rs  testing.rs
src_debug_ui/: mod.rs  plugins.rs  systems.rs
