[workspace]
members = ["bevy_rapier2d", "bevy_rapier3d"]
resolver = "2"

[profile.release]
codegen-units = 1

[patch.crates-io]
#nalgebra = { path = "../nalgebra" }
#parry2d = { path = "../parry/build/parry2d" }
#parry3d = { path = "../parry/build/parry3d" }
# rapier2d = { path = "../rapier/crates/rapier2d" }
# rapier3d = { path = "../rapier/crates/rapier3d" }
rapier2d = { git = "https://github.com/dimforge/rapier", rev = "7efcff615e821d97957fe813d066567117c8e999" }
rapier3d = { git = "https://github.com/dimforge/rapier", rev = "7efcff615e821d97957fe813d066567117c8e999" }