[package]
name = "bevy_rapier2d"
version = "0.29.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "2-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier2d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "../README.md"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }
clippy = { needless_lifetimes = "allow" }

[features]
default = [
    "dim2",
    "async-collider",
    "debug-render-2d",
    "picking-backend",
    "to-bevy-mesh",
]
dim2 = []
debug-render-2d = [
    "bevy/bevy_core_pipeline",
    "bevy/bevy_sprite",
    "bevy/bevy_gizmos",
    "rapier2d/debug-render",
    "bevy/bevy_asset",
]
debug-render-3d = [
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gizmos",
    "rapier2d/debug-render",
    "bevy/bevy_asset",
]
rapier-debug-render = ["rapier2d/debug-render"]

parallel = ["rapier2d/parallel"]
simd-stable = ["rapier2d/simd-stable"]
simd-nightly = ["rapier2d/simd-nightly"]
serde-serialize = ["rapier2d/serde-serialize", "bevy/serialize", "serde"]
enhanced-determinism = ["rapier2d/enhanced-determinism"]
headless = []
picking-backend = ["bevy/bevy_picking", "bevy/bevy_render"]
async-collider = [
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_render",
    "bevy/bevy_image",
]
to-bevy-mesh = ["bevy/bevy_render", "bevy/bevy_asset"]

[dependencies]
bevy = { version = "0.15", default-features = false }
nalgebra = { version = "0.33", features = ["convert-glam029"] }
rapier2d = "0.23"
bitflags = "2.4"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "x11",
    "bevy_state",
    "bevy_window",
    "bevy_debug_stepping",
] }
oorandom = "11"
approx = "0.5.1"
glam = { version = "0.29", features = ["approx"] }
bevy-inspector-egui = "0.28.0"
bevy_egui = "0.31"
bevy_mod_debugdump = "0.12"
serde_json = "1.0"

[package.metadata.docs.rs]
# Enable all the features when building the docs on docs.rs
features = ["debug-render-2d", "serde-serialize"]

[package.metadata.cargo-all-features]

denylist = ["simd-nightly"]

# Features "dim2" and "dim3" are incompatible, so skip permutations including them
skip_feature_sets = [["enhanced-determinism", "simd-stable"]]

always_include_features = ["dim2"]

# The maximum number of features to try at once. Does not count features from `always_include_features`.
# This is useful for reducing the number of combinations run for a crate with a large amount of features,
# since in most cases a bug just needs a small set of 2-3 features to reproduce.
max_combination_size = 1
