[package]
name = "bevy_rapier2d_examples"
version = "0.23.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "2-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier2d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "../README.md"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", default-features = false }
bevy_rapier2d = { path = "../bevy_rapier2d" }
