[package]
name = "bevy_rapier3d"
version = "0.32.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier3d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "../README.md"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = ["dim3"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
] }
clippy = { needless_lifetimes = "allow" }

[features]
default = [
    "dim3",
    "async-collider",
    "debug-render-3d",
    "picking-backend",
    "to-bevy-mesh",
]
dim3 = []
debug-render = ["debug-render-3d"]
debug-render-2d = [
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_gizmos",
    "rapier3d/debug-render",
    "bevy_asset",
]
debug-render-3d = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gizmos",
    "rapier3d/debug-render",
    "bevy_asset",
]
rapier-debug-render = ["rapier3d/debug-render"]

parallel = ["rapier3d/parallel"]
simd-stable = ["rapier3d/simd-stable"]
simd-nightly = ["rapier3d/simd-nightly"]
serde-serialize = ["rapier3d/serde-serialize", "bevy_ecs/serialize", "serde"]
enhanced-determinism = ["rapier3d/enhanced-determinism"]
headless = []
picking-backend = ["bevy_picking", "bevy_camera"]
async-collider = [
    "bevy_asset",
    "bevy_scene",
    "bevy_render",
    "bevy_image",
]
to-bevy-mesh = ["bevy_asset", "bevy_mesh"]

[dependencies]
# Bevy crates
bevy_app = { version = "0.17.3", default-features = false }
bevy_derive = { version = "0.17.3", default-features = false }
bevy_ecs = { version = "0.17.3", default-features = false }
bevy_math = { version = "0.17.3", default-features = false }
bevy_reflect = { version = "0.17.3", default-features = false }
bevy_time = { version = "0.17.3", default-features = false }
bevy_transform = { version = "0.17.3", default-features = false }
bevy_platform = { version = "0.17.3", default-features = false, features = ["std"] }
bevy_log = { version = "0.17.3", default-features = false }
bevy_color = { version = "0.17.3", default-features = false }

# Optional bevy crates for features
bevy_asset = { version = "0.17.3", default-features = false, optional = true }
bevy_scene = { version = "0.17.3", default-features = false, optional = true }
bevy_image = { version = "0.17.3", default-features = false, optional = true }
bevy_mesh = { version = "0.17.3", default-features = false, optional = true }
bevy_picking = { version = "0.17.3", default-features = false, optional = true }
bevy_camera = { version = "0.17.3", default-features = false, optional = true }
bevy_gizmos = { version = "0.17.3", default-features = false, optional = true }
bevy_sprite = { version = "0.17.3", default-features = false, optional = true }
bevy_pbr = { version = "0.17.3", default-features = false, optional = true }
bevy_core_pipeline = { version = "0.17.3", default-features = false, optional = true }

nalgebra = { version = "0.34.1", features = ["convert-glam030"] }
rapier3d = "0.31.0"
bitflags = "2.10.0"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_window",
    "x11",
    "tonemapping_luts",
    "bevy_state",
    "bevy_debug_stepping",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "bevy_log",
] }
approx = "0.5.1"
glam = { version = "0.30.9", features = ["approx"] }
bevy-inspector-egui = "0.35.0"
bevy_egui = "0.38.0"
bevy_mod_debugdump = "0.14.0"

[package.metadata.docs.rs]
# Enable all the features when building the docs on docs.rs
features = ["debug-render-3d", "serde-serialize", "async-collider"]

[package.metadata.cargo-all-features]

denylist = ["simd-nightly"]

# Features "dim2" and "dim3" are incompatible, so skip permutations including them
skip_feature_sets = [["enhanced-determinism", "simd-stable"]]

always_include_features = ["dim3"]

# The maximum number of features to try at once. Does not count features from `always_include_features`.
# This is useful for reducing the number of combinations run for a crate with a large amount of features,
# since in most cases a bug just needs a small set of 2-3 features to reproduce.

max_combination_size = 1
[[example]]
name = "picking3"
required-features = ["picking-backend"]

[[example]]
name = "testbed3"
required-features = ["picking-backend"]
