[package]
name = "custom_benches"
description = "Custom benchmarks for bevy_rapier."
readme = "./README.md"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = { features = ["profiler"], version = "0.21" }
bevy_rapier3d = { path = "../bevy_rapier3d" }
bevy = { version = "0.14.0-rc.3", default-features = false }
benches_common = { path = "../benches_common" }
